--- a/src/app/consumidor/tab_inicio/inicio/inicio.page.html
+++ b/src/app/consumidor/tab_inicio/inicio/inicio.page.html
@@ -25,7 +25,7 @@
 
   <div class="center">
     <ion-card  class="tam-map">
-      <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
+      <app-googlemaps [acopios]="acopios" [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
     </ion-card>
   </div>
 </ion-content>
