--- a/src/app/ma_acopiadora/menu/menu.page.html
+++ b/src/app/ma_acopiadora/menu/menu.page.html
@@ -4,11 +4,15 @@
       <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Inicio</ion-label>
     </ion-tab-button>
-
+    <ion-tab-button tab="agricultoras">
+      <ion-icon src="/assets/iconos/agricultores.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Agricultoras</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="centroAcopio">
       <ion-icon src="/assets/iconos/o_acopio.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Editar Centro</ion-label>
     </ion-tab-button>
 
+   
   </ion-tab-bar>
 </ion-tabs>
