--- a/src/app/ma_acopiadora/modals/acopio-modal/acopio-modal.page.html
+++ b/src/app/ma_acopiadora/modals/acopio-modal/acopio-modal.page.html
@@ -21,7 +21,9 @@
     <div class="modal-name-user">{{description}}</div>
     <div>{{days}}</div>
     <div>{{hours}}</div>
-
+    <div>{{user}}</div>
+    <div>{{phone}}</div>
+    <ion-button class="ion-padding" expand="full" style="--background: #50CD89;"><ion-icon name="logo-whatsapp"></ion-icon> <a href="https://wa.me/593{{phone}}" style="color: whitesmoke;"> &nbsp;&nbsp; Contactar</a></ion-button>
     <!-- <div>
       <ion-button class="boton-warmi-in" (click)="viewProfile()">Ver perfisssss</ion-button>
     </div> -->
