--- a/src/app/ma_acopiadora/tab-agricultoras/perfil-ma/perfil-ma.page.html
+++ b/src/app/ma_acopiadora/tab-agricultoras/perfil-ma/perfil-ma.page.html
@@ -3,19 +3,13 @@
     <div class="contenedor-header-icon">
       <!-- Contenedor 1 -->
       <div class="contenedor-header-config">
-        <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_perfil.svg">
+        <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/agricultor.svg">
         </ion-icon>
         <div class="texto-header">Perfil mujer agricultora</div>
       </div>
     </div>
-    <!-- Boton Editar Perfil -->
-   <!--  <div class="icon-end">
-      <ion-button (click)="onClick()" class="boton-warmi-in">
-        <ion-icon slot="icon-only" src="assets/icon/update_date.svg"></ion-icon>
-      </ion-button>
-    </div> -->
   </div>
-  <!-- Dato 1 -->
+
   <div class="datos-personales">
     <div class="imagen-buttom">
       <img class="img-profile" src="{{foto || 'assets/img/profileDefault.jpg'}}" />
@@ -29,7 +23,7 @@
         <ion-card-subtitle>Venta de productos frescos</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-<!--         <div class="text-bold text-color-brown">Id:</div>
+      <!--   <div class="text-bold text-color-brown">Id:</div>
         <div class="text-color-purple">{{identification_card}}</div> -->
         <!--  -->
         <div class="text-bold text-color-brown">Teléfono:</div>
@@ -37,15 +31,13 @@
       </ion-card-content>
     </div>
   </div>
-  <!-- Descripcion y start -->
+
   <div class="padding-profile-desc">
     <div class="contenedor-descripcion">
       <div class="text-color-purple">Venta de productos frescos</div>
     </div>
     <div>
       <div class="ion-text-left text-bold text-color-brown">Calificación</div>
-      <div>
-
         <div class="contenedor-valoracion">
           <!-- <div class="calificación text-bold text-color-brown">Calificación</div> -->
           <div class="lechugas">
@@ -57,35 +49,17 @@
           </div>      
           <div class="valoracion text-bold text-white">4.5</div>
         </div>
-      </div>
+    
     </div>
-  </div>
 
-  <div class="center">
-    <!-- <ion-card style="width: 100%; height: 30vh;">
-      <app-googlemaps [buscador]="buscador"  [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
-    </ion-card> -->
-    <ion-card class="tam-map">
-      <app-googlemaps [miUbicacion]="miUbicacion" [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
-    </ion-card>
   </div>
-  
-  <div class="contenedor-list-ventas" id="contenedor-list-ventas">
-    <ion-card class="contenedor-card-p">
-      <ion-card-header class="encabezado-card">
-        <ion-card-title class="text-white text-bold">Horario</ion-card-title>
-      </ion-card-header>
-      <ng-container *ngFor="let horario of feature">
-      <ion-card-content *ngIf="horario.days" class="descripcion-card">
-        <div class="text-color-purple">{{horario.days}}</div>
-        <div class="text-color-purple">{{horario.hours}}</div>
-      </ion-card-content>
-    </ng-container>
-    </ion-card>
-  </div>
+  <ion-list>
+    <ion-item *ngFor="let product of products">
+      <ion-text slot="end">{{product.price}} $</ion-text>
+      <ion-label>{{product.product}} - {{product.measure}}</ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-button class="ion-padding" expand="full" style="--background: #50CD89;"><ion-icon name="logo-whatsapp"></ion-icon> <a href="https://wa.me/593{{phoneNumber}}" style="color: whitesmoke;"> &nbsp;&nbsp; Contactar</a></ion-button>
 
-  <div class="btn-ordenar">
-    <ion-button class="boton-warmi-in" [routerLink]="['/consumidor/tab-inicial/productos', id]">Ver productos
-    </ion-button>
-  </div>
+    
 </ion-content>
