--- a/src/app/ma_vendedora/componets/comercializacion/comercializacion.component.html
+++ b/src/app/ma_vendedora/componets/comercializacion/comercializacion.component.html
@@ -1,5 +1,5 @@
 <div class="center">
   <ion-card class="tam-map">
-    <app-googlemaps [feature] = "feature" [modal]="modal"></app-googlemaps>
+    <app-googlemaps [acopios]="acopios" [feature] = "feature" [modal]="modal"></app-googlemaps>
   </ion-card>
 </div>
