--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,9 +45,9 @@
             </ion-button>
           </div>
           <div *ngIf="role === 'Consumidor'" class="contenedor-item-menu">
-            <ion-button (click)="onClick()" fill="outline" class="text-white border-white text-capitalize size-boton">
+            <ion-button (click)="goFavorites()" fill="outline" class="text-white border-white text-capitalize size-boton">
               <ion-icon slot="start" src="/assets/icon/vend_favorites.svg"></ion-icon>
-              Vendedores Favoritos
+              Vendedoras Favoritos
             </ion-button>
           </div>          
         </div>
