--- a/src/app/c_bus/paradas/paradas.page.html
+++ b/src/app/c_bus/paradas/paradas.page.html
@@ -9,15 +9,7 @@
   </div>
   <ion-row class="ion-padding">
     <ion-col style="margin-top: 8px;">
-      <ion-label class="text-color-purple text-bold">Selecciona la ruta</ion-label>
-    </ion-col>
-    <ion-col>
-      <ion-select interface="popover" placeholder="Seleccione...">
-        <ion-select-option value="apples">Ruta 1</ion-select-option>
-        <ion-select-option value="oranges">Ruta 2</ion-select-option>
-        <ion-select-option value="bananas">Ruta 3</ion-select-option>
-      </ion-select>
-
+      <ion-label class="text-color-purple text-bold">Información paradas de buses</ion-label>
     </ion-col>
   </ion-row>
 
