--- a/src/app/c_camioneta/menu/menu.page.html
+++ b/src/app/c_camioneta/menu/menu.page.html
@@ -4,5 +4,12 @@
       <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Inicio</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="notificaciones">
+      <ion-icon src="/assets/iconos/notifications_1.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Notificaciones</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
+
+  
 </ion-tabs>
