--- a/src/app/consumidor/components/detallescarrito/detallescarrito.component.html
+++ b/src/app/consumidor/components/detallescarrito/detallescarrito.component.html
@@ -128,7 +128,7 @@
          
         </ion-list>
         <div class="btn-ordenar" style="padding: 5px;">
-          <ion-button type="submit" (click)="createOrder()" expand="block" class="boton-warmi-in">
+          <ion-button type="submit" (click)="confirmarOrden()" expand="block" class="boton-warmi-in">
             <ion-icon name="card-outline"></ion-icon> Ordenar
           </ion-button>
         </div>
