--- a/src/app/c_privado/menu/menu.page.html
+++ b/src/app/c_privado/menu/menu.page.html
@@ -17,7 +17,7 @@
     <ion-tab-button tab="novedades">
       <!-- <ion-icon name="globe-outline"></ion-icon>
       <ion-label>Noticias</ion-label> -->
-      <ion-icon src="/assets/iconos/o_world.svg"></ion-icon>
+      <ion-icon src="/assets/iconos/o_planification.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Noticias</ion-label>
     </ion-tab-button>
 
@@ -27,6 +27,11 @@
 <!--       <ion-icon src="/assets/iconos/o_planification.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Planificación</ion-label>
     </ion-tab-button> -->
-
+    <ion-tab-button tab="notificaciones">
+      <!-- <ion-icon name="globe-outline"></ion-icon>
+      <ion-label>Noticias</ion-label> -->
+      <ion-icon src="/assets/iconos/o_world.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Notificaciones</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
