--- a/src/app/ma_vendedora/modals/modal-privado/modal-privado.page.html
+++ b/src/app/ma_vendedora/modals/modal-privado/modal-privado.page.html
@@ -17,9 +17,9 @@
       <div class="ion-text-center text-bold text-color-brown">{{user_name}}</div>
       <div class="ion-text-center text-color-purple">{{phone_number}}</div>
       <div class="ion-text-center contenedor-datos">
-        <ion-button class=" boton-whatsapp">
-          <ion-icon name="logo-whatsapp"></ion-icon> <a href="https://wa.me/{{phone_number}}" class="text-white">&nbsp;
-            Contactar</a>
+        <ion-button (click)="confirmWhatsApp()" class=" boton-whatsapp">
+          <ion-icon name="logo-whatsapp"></ion-icon> &nbsp;
+            Contactar
         </ion-button>
       </div>
     </div>
