--- a/src/app/ma_vendedora/tab_transporte/perfil-conductor/perfil-conductor.page.html
+++ b/src/app/ma_vendedora/tab_transporte/perfil-conductor/perfil-conductor.page.html
@@ -33,9 +33,9 @@
       <div class="ion-text-center text-bold text-color-brown">{{name}}</div>
       <div class="ion-text-center text-color-purple">{{phone}}</div>
       <div class="ion-text-center contenedor-datos">
-        <ion-button class=" boton-whatsapp">
-          <ion-icon name="logo-whatsapp"></ion-icon> <a href="https://wa.me/593993335589" class="text-white">&nbsp;
-            Contactar</a>
+        <ion-button class=" boton-whatsapp" (click)="confirmWhatsApp()">
+          <ion-icon name="logo-whatsapp"></ion-icon>&nbsp;
+            Contactar
         </ion-button>
       </div>
     </div>
@@ -63,43 +63,3 @@
     </div>
   </div>
 </ion-content>
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Conductor camioneta</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <ion-card style="border-radius:20px; text-align: center;">
-   
-    <img width="125" src="assets/img/comprador.jpg" />
-    <ion-card-header>
-      <ion-card-title> {{name}}</ion-card-title>
-     </ion-card-header>
-    <ion-card-content>
-      {{phone}}
-    </ion-card-content>
-  
-  </ion-card>
- 
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Descripción</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <p>{{description}}</p>
-      <p>{{color}}</p>
-      <p>{{car_plate}}</p>
-
-    </ion-card-content>
-  </ion-card>
-
-  <ion-button class="ion-padding" expand="full" style="--background: #50CD89;"><ion-icon name="logo-whatsapp"></ion-icon> <a href="https://wa.me/593993335589" style="color: whitesmoke;"> &nbsp;&nbsp; Contactar</a></ion-button>
-
-<br>
-  <ion-card  class="ion-margin">
-    <ion-header>
-      <ion-card-title>Califica a este conductor</ion-card-title>
-    </ion-header>
-  </ion-card>
-</ion-content> -->
