--- a/src/app/ma_lideresa/tab_notificaciones/lista/lista.page.html
+++ b/src/app/ma_lideresa/tab_notificaciones/lista/lista.page.html
@@ -9,127 +9,23 @@
   </div>
 
   <div class="contenedor-estado">
-    <div class="text-bold text-color-purple"> Estado</div>
-    <div>
-      <ion-select interface="popover" placeholder="Seleccione...">
-        <ion-select-option value="apples">Aceptada</ion-select-option>
-        <ion-select-option value="oranges">Rechazada</ion-select-option>
-      </ion-select>
-    </div>
+    <div class="text-bold text-color-purple"> Lista de invitaciones enviadas</div>
   </div>
 
   <ion-card>
-    <ion-item style="font-size: 12px;">
-      <ion-chip slot="end" color="danger">Rechazada</ion-chip>
+    <ion-item *ngFor="let invitation of invitations" style="font-size: 12px;">
+      <ion-chip *ngIf="invitation.status === 'Aceptada'" slot="end" color="success">{{invitation.status}}</ion-chip>
+      <ion-chip (click)="updateStatus(invitation.id, 'Aceptada')" *ngIf="invitation.status !== 'Aceptada'" slot="end" color="warning">{{invitation.status}}</ion-chip>
       <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="assets/img/mujer.webp" />
+        <img alt="Silhouette of mountains" src="{{invitation.photoSeller || 'assets/img/profileDefault.jpg'}}" />
       </ion-thumbnail>
 
-      <ion-label>
-        <div class="text-bold text-color-brown">María Perez</div>
-        <div class="text-color-purple">05/06/2022</div>
+      <ion-label (click)="goWhatsApp(invitation.seller_phone)">
+        <div class="text-bold text-color-brown">{{invitation.seller_name}}</div>
+        <div class="text-color-purple">{{invitation.date.slice(0,10)}}</div>
+        <div class="text-color-purple">{{invitation.seller_phone}}</div>
       </ion-label>
     </ion-item>
-    <ion-item style="font-size: 12px;">
-      <ion-chip slot="end" color="success">Aprobada</ion-chip>
-      <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="assets/img/mujer.webp" />
-      </ion-thumbnail>
-
-      <ion-label>
-        <div class="text-bold text-color-brown">María Perez</div>
-        <div class="text-color-purple">05/06/2022</div>
-      </ion-label>
-    </ion-item>
-
-    <ion-item style="font-size: 12px;">
-      <ion-chip slot="end" color="success">Aprobada</ion-chip>
-      <ion-thumbnail slot="start">
-        <img alt="Silhouette of mountains" src="assets/img/mujer.webp" />
-      </ion-thumbnail>
-
-      <ion-label>
-        <div class="text-bold text-color-brown">María Perez</div>
-        <div class="text-color-purple">05/06/2022</div>
-      </ion-label>
-    </ion-item>
-
   </ion-card>
-
-<!-- 
-<ion-card style="border-radius: 20px;">
-    <ion-list>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src="assets/img/mujer.webp" />
-        </ion-thumbnail>
-        <ion-label>
-        <h3>María Perez</h3>
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <p>05/06/2022</p>
-            </ion-col>
-            <ion-col style="text-align: right;">
-              <ion-badge color="danger" style="color: white;">Invitación rechazada</ion-badge>
-            </ion-col>
-          </ion-row>
-      </ion-grid>
-      </ion-label>
-      </ion-item>
-    </ion-list>
-    </ion-card>
-    <ion-card style="border-radius: 20px;">
-      <ion-list>
-        <ion-item>
-          <ion-thumbnail slot="start">
-            <img src="assets/img/mujer.webp" />
-          </ion-thumbnail>
-          <ion-label>
-          <h3>Lechuga crespa</h3>
-          <ion-grid>
-            <ion-row>
-              <ion-col>
-                <p>2 Bultos</p>
-              </ion-col>
-              <ion-col style="text-align: right;">
-                <ion-badge color="success">Invitación aceptada</ion-badge>
-              </ion-col>
-            </ion-row>
-        </ion-grid>
-        </ion-label>
-        </ion-item>
-      </ion-list>
-      </ion-card>
-      <ion-card style="border-radius: 20px;">
-        <ion-list>
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img src="assets/img/mujer.webp" />
-            </ion-thumbnail>
-            <ion-label>
-            <h3>Lechuga crespa</h3>
-            <ion-grid>
-              <ion-row>
-                <ion-col>
-                  <p>2 Bultos</p>
-                </ion-col>
-                <ion-col style="text-align: right;">
-                  <ion-badge color="success">Invitación aceptada</ion-badge>
-
-                </ion-col>
-              </ion-row>
-          </ion-grid>
-          </ion-label>
-          </ion-item>
-        </ion-list>
-        </ion-card> -->
-
-
-<ion-modal [keepContentsMounted]="true">
-  <ng-template>
-    <ion-datetime presentation="date" id="datetime"></ion-datetime>
-  </ng-template>
-</ion-modal>
 
 </ion-content>
