--- a/src/app/consumidor/components/detallescarrito/detallescarrito.component.html
+++ b/src/app/consumidor/components/detallescarrito/detallescarrito.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="contenedor-list-ventas" id="contenedor-list-ventas">
-  <ion-card class="contenedor-card-p" *ngFor="let product of productos">
+  <ion-card class="contenedor-card-p" *ngFor="let product of products">
     <ion-card-header class="encabezado-card">
       <ion-card-title class="text-white text-bold">{{product.farmer}}</ion-card-title>
       <ion-card-subtitle class="text-white">{{product.phone}}</ion-card-subtitle>
