--- a/src/global.scss
+++ b/src/global.scss
@@ -474,3 +474,12 @@ ion-popover::part(content) {
   color: #F06363 ;
   font-size: 12px;
   }
+
+
+.contenedor-rating{
+  margin-top: -33px;
+  margin-bottom: -33px;
+  // padding: 1px;
+  // height: 10px;
+  // width: 200px;
+}
