--- a/src/app/consumidor/tab_agricultoras/detalles-producto/detalles-producto.page.html
+++ b/src/app/consumidor/tab_agricultoras/detalles-producto/detalles-producto.page.html
@@ -18,17 +18,14 @@
   </div>
 
   <div class="contenedor-descripcion">
-    <ion-card>
+    <ion-card style="width:100%;">
       <!-- <ion-card *ngFor="let product of products" class="contenedor-card-p"> -->
       <ion-card-header>
         <ion-card-title class="text-bold text-color-brown">Descripción</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <div class="descripcion-producto text-color-purple">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-          Explicabo voluptatibus ea hic odit asperiores maxime neque dolorem blanditiis unde, laborum est veritatis,
-          eaque aspernatur consectetur id labore nam cumque aliquid qui. Quibusdam quidem sequi ipsam eveniet autem
-          alias voluptates obcaecati.
-          in.</div>
+        <div class="descripcion-producto text-color-purple">{{description}}
+          </div>
       </ion-card-content>
     </ion-card>
     <!-- <ion-label class="descripcion-producto text-color-purple">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
