--- a/src/app/ma_vendedora/componets/entregas/entregas.component.html
+++ b/src/app/ma_vendedora/componets/entregas/entregas.component.html
@@ -1,6 +1,16 @@
-<ion-card>
+<ion-card *ngFor="let order of orders">
 
-  <ion-item *ngFor="let order of orders" style="font-size: 12px;" routerLinkActive="router-link-active" >
+  <ion-item *ngIf="order.status !== 'Completada'"  style="font-size: 12px;--background: rgb(255, 234, 191)" routerLinkActive="router-link-active" >
+    <ion-chip *ngIf="order.status === 'Completada'" slot="end" color="success">{{order.status}}</ion-chip>
+    <ion-chip (click)="updateStatus(order.id)" *ngIf="order.status === 'Pendiente'" slot="end" color="warning">{{order.status}}</ion-chip>
+    <ion-thumbnail slot="start">
+      <img alt="Silhouette of mountains" src="assets/img/compra.png" />
+    </ion-thumbnail>
+    <ion-label  (click)="viewDetails(order.id)">{{order.client}}
+      
+      <p>{{order.deliver_date}}</p></ion-label>
+  </ion-item>
+  <ion-item *ngIf="order.status === 'Completada'"  style="font-size: 12px;" routerLinkActive="router-link-active" >
     <ion-chip *ngIf="order.status === 'Completada'" slot="end" color="success">{{order.status}}</ion-chip>
     <ion-chip (click)="updateStatus(order.id)" *ngIf="order.status === 'Pendiente'" slot="end" color="warning">{{order.status}}</ion-chip>
     <ion-thumbnail slot="start">
@@ -11,6 +21,5 @@
       <p>{{order.deliver_date}}</p></ion-label>
   </ion-item>
 
-
-
 </ion-card>
+
