--- a/src/app/ma_lideresa/tab-inicio/tab-inicio.page.html
+++ b/src/app/ma_lideresa/tab-inicio/tab-inicio.page.html
@@ -9,7 +9,7 @@
     <!-- Contenedor 2 -->
     <div class="contenedor-title">
       <div>
-        <h4 class="text-center size-text35px text-bold text-color-purple">Ubicación  de punto de venta de vendoras</h4>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Ubicación  de punto de venta de vendedoras</h4>
       </div>
     </div>
   </div>
