--- a/src/app/ma_vendedora/tab_productos/agregar-producto/agregar-producto.page.html
+++ b/src/app/ma_vendedora/tab_productos/agregar-producto/agregar-producto.page.html
@@ -78,7 +78,7 @@
     <div class="contenedor-item">
       <ion-icon slot="start" class="size-icon" src="/assets/iconos/col.svg"></ion-icon>
       <ion-item lines="none" class="input-border-bot item-native-transparency">
-        <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Stock:
+        <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Unidades disponibles en venta:
         </ion-label>
         <ion-input value="{{stock || ''}}" [(ngModel)]="stock" type="text" formControlName="stock"
           class="text-center">
